third_party/move/move-compiler-v2/tests/more-v1/expansion/standalone_fields.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/expansion/standalone_fields.move:3:11
  │
3 │         {f: 1, g: 0};
  │           ^
  │           │
  │           Unexpected ':'
  │           Expected ';'
